--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
+
+
+    
     <!-- Links do menu -->
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto">
@@ -44,7 +47,8 @@
           <a class="nav-link" href="#">Página principal<span class="sr-only">(página atual)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="./carrinho.html" style="color: white;">
+            Carrinho</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -362,5 +366,6 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"></script>
 </body>
+<footer>&copy;Todos os direitos reservados</footer>
 
 </html>
